[tool.poetry]
name = "blog-omer"
version = "0.1.0"
description = ""
authors = ["Adrien <derosiere@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_omer"}]

[tool.poetry.dependencies]
python = "~3.12"
mkdocs-material = "^9.5.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
